name:                froth-haskell-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/froth/froth-haskell-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Import
                     , Types
                     , Environment
  other-modules:       WaiHelpers
                     , Stage
  ghc-options:       -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:       base >= 4.11 && < 10
                     , rio >=0.1.12.0
                     , aeson
                     , mtl
                     , servant-server
                     , wai
                     , wai-app-static
                     , wai-cors
                     , wai-extra
                     , warp
                     , postgresql-simple
                     , resource-pool
  default-language:    Haskell2010

executable froth-haskell-test
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.11 && < 10
                     , rio >=0.1.12.0
                     , resource-pool
                     , postgresql-simple
                     , froth-haskell-test
  default-language:    Haskell2010

test-suite froth-haskell-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.11 && < 10
                     , rio >=0.1.12.0
                     , froth-haskell-test
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/froth/froth-haskell-test
